# napari-labelprop

./: .cruft.json  .gitignore  README.md  exemple.ipynb  exemple.py  mkdocs.yml  pretrained.ckpt  pyro_client.py  setup.cfg  test_pyro.py  tox.ini
.github/workflows/: test_and_deploy.yml
checkpoints/bench/: labelprop-epoch=08-val_accuracy=0.31-22032022-113649.ckpt
docs/: index.md
lightning_logs/version_0/: events.out.tfevents.1647945413.nathan-Precision-Tower-7910.1562825.0  hparams.yaml
src/: DataLoading.py  LabelProp.py  Pretraining_model.py  napari_entry.py  script.py  train.py
src/napari_labelprop/: _label_prop_widget.py  _reader.py  napari.yaml  requirements.txt
