[metadata]
name = napari-labelprop
version = 0.0.1
author = nathandecaux
author_email = nathan.decaux@imt-atlantique.fr

license = BSD-3-Clause
description = Label propagation through deep registration
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
# add your package requirements here
install_requires =
    numpy
    kornia==0.5.8
    matplotlib==3.3.2
    medpy==0.4.0
    monai==0.6.0
    nibabel==3.2.1
    numpy==1.19.2
    pandas==1.1.3
    pytorch_lightning==1.3.8
    scikit_image==0.19.2
    scipy
    torch==1.10.2
    torchio==0.18.47
    torchvision==0.11.3
[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-labelprop = napari_labelprop:napari.yaml
